<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_path_planning</name>
  <version>0.0.0</version>
  <description>Navigation tools in aerostack2 framework</description>
  <maintainer email="cvar.upm3@gmail.com">CVAR-UPM</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>as2_core</depend>
  <depend>as2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>as2_motion_reference_handlers</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
