<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_platform_dji_psdk</name>
  <version>0.0.0</version>
  <description>AS2 DJI PSDK aerial platform</description>
  
  <maintainer email="cvar.upm3@gmail.com">CVAR-UPM</maintainer>

  <license>BDS-3</license>

  <author email="r.psegui@upm.es">Rafael Perez-Segui</author>
  <author email="santiago.tapia@upm.es">Santiago Tapia-Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>as2_core</depend>
  <depend>as2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>psdk_interfaces</depend>

  <!-- linting test dependencies -->
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
